# RmlOgre

./: CMakeLists.txt  LICENSE.txt  README.md
bin_cfg/: plugins.cfg  plugins_d.cfg  resources.cfg
cmake/: FindOGRE-Next.cmake  FindRemotery.cmake  OGRE.cmake
cmake/templates/: resources.cfg.in
example/: CMakeLists.txt
example/src/: main.cpp
media/Hlms/Common/Any/: Cubemap_piece_all.any  DualParaboloid_piece_ps.any
media/Hlms/Common/Metal/: RenderDepthOnly_piece_ps.metal
media/Hlms/Unlit/Any/: 800.VertexShader_piece_vs.any
media/Hlms/Unlit/GLSL/: PixelShader_ps.glsl  VertexShader_vs.glsl
media/Hlms/Unlit/Metal/: PixelShader_ps.metal
media/rml/: render_test4_compositor_rebuild.rml  render_test_01_geometry.rml  render_test_02_textures.rml  render_test_03_scissor_region.rml  render_test_04_compositor_rebuild.rml  render_test_05_transform.rml  render_test_06_clip_mask.rml  render_test_07_filters.rml  render_test_08_render_to_texture.rml  render_test_09_mask_image.rml  render_test_10_shaders.rml
media/scripts/compositors/: Example.compositor  Rml.compositor  Ui.compositor
media/scripts/compositors/Rml/: Rml.compositor
media/scripts/materials/AlphaBlend/: AlphaBlend.material  AlphaBlend_ps.glsl
media/scripts/materials/Rml/: AlphaBlend.material  Blur.material  ColourMatrix.material  Gradient.material  Halfsample.material  Mask.material  Opacity.material  ScissorCopy.material  Shader.program  Shadow.material  ToSRGB.material
media/scripts/materials/Rml/GLSL/: Blur_ps.glsl  BlurlessShadow_ps.glsl  ColourMatrix_ps.glsl  Colourize_ps.glsl  Gradient_ps.glsl  Halfsample_vs.glsl  Mask_ps.glsl  Offset_vs.glsl  Opacity_ps.glsl  Resample_vs.glsl  ScissorQuad_vs.glsl  Shader_vs.glsl  ToSRGB_ps.glsl
media/scripts/materials/Rml/HLSL/: AlphaBlend_ps.hlsl  Blur_ps.hlsl  BlurlessShadow_ps.hlsl  ColourMatrix_ps.hlsl  Colourize_ps.hlsl  Gradient_ps.hlsl  Halfsample_vs.hlsl  Mask_ps.hlsl  Offset_vs.hlsl  Opacity_ps.hlsl  Resample_vs.hlsl  ScissorQuad_vs.hlsl  Shader_vs.hlsl  ToSRGB_ps.hlsl
src/RmlOgre/: BasePass.hpp  BaseRenderPass.cpp  BaseRenderPass.hpp  CompositorPassGeometry.cpp  CompositorPassGeometry.hpp  CompositorPassGeometryDef.hpp  FilterMaker.cpp  FilterMaker.hpp  Geometry.cpp  Geometry.hpp  Material.cpp  Material.hpp  NodeConnectionMap.cpp  NodeConnectionMap.hpp  ObjectIndex.hpp  Pass.cpp  Pass.hpp  RenderInterface.cpp  RenderInterface.hpp  RenderObject.cpp  RenderObject.hpp  ResourcePool.hpp  ShaderMaker.hpp  Workspace.cpp  Workspace.hpp  filters.cpp  filters.hpp  geometry.cpp  geometry.hpp  shaders.cpp  shaders.hpp
src/RmlOgre/Compositor/: CompositorPass.cpp  CompositorPass.hpp  CompositorPassGeometry.cpp  CompositorPassGeometry.hpp  CompositorPassGeometryDef.hpp  CompositorPassRenderQuad.cpp  CompositorPassRenderQuad.hpp  CompositorPassRenderQuadDef.cpp  CompositorPassRenderQuadDef.hpp
